# opencv_dollar_detector

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AcfCaltechDetector.xml  CMakeCache.txt  CMakeLists.txt  QtAcfDetect.pro  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  acfDetectInputTest.cpp  calculate_all_scales_detector.xml  cmake_install.cmake  detector.xml  odd.conf  odd_pets.conf  opencv_dollar_detector.sln  opencv_dollar_detector.vcxproj  opencv_dollar_detector.vcxproj.filters  todo  towncentre_calib.xml
Piotr's Toolbox/: acfDetectDetectionTest.cpp  acfDetectInputTest.cpp  chnsPyramid.m
Results/: approx sizes
matlab/: GreedyAssociation.m  average_precision_recall.m  filter_detections.m  filter_detections_th.m  get_frame.m  main.m  plot_candidates.m  plot_candidates.m~  plot_grid.m  plot_groundplane_limits.m  plot_groundplane_limits.m~  precision_recall_score.m  precision_recall_score_allframes.m  process_ocd_output.m  process_ocd_output_allinone.m  showboxes.m  test_plot_pr.m  wcs2ics.m
piotr's toolbox/: acfDetect.m  acfDetect1.cpp  bbNms.m  chnsCompute.m  chnsPyramid.m  convConst.cpp  gradientMex.cpp  resultChns254.mat  rgbConvertMex.cpp  sse.hpp  wrappers.hpp
src/: BoundingBox.cpp  BoundingBox.h  Channel.h  ChannelFeatures.cpp  ChannelFeatures.h  Clf.cpp  Clf.h  ColorChannel.cpp  ColorChannel.h  ColorChannels.h  ColorSpace.cpp  ColorSpace.h  CppAcfDetect.cpp  CppAcfDetect.h  Detector.cpp  Detector.h  GradientHistogram.h  GradientMagnitude.h  GradientMagnitudeChannel.cpp  Info.h  Options.cpp  (+19 more)
tests/float2cvMat/: CMakeLists.txt  main.cpp
(+75 files in other folders)
